--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Cat Clicker</h1>
 
-
+<!--insert cat image and move/click counter-->
   <script src="js/app.js"></script>
 </body>
 </html>
