--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
 <body>
   <h1>Cat Clicker</h1>
+  <p></p>
 
+<div class="cats" id="cat1">
 <!--insert cat image and move/click counter-->
+<img src="images/cat1.jpg" id="catImg1">
+<p></p>
+<p class="clickText" id="clickText1">0 clicks</p>
+</div>
+
   <script src="js/app.js"></script>
 </body>
 </html>
