--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--insert cat image and move/click counter-->
 <img src="images/cat1.jpg" id="catImg1">
 <p></p>
-<p class="clickText" id="clickText">0 clicks</p>
+<span class="click-count" id="clicks">0</span> clicks
 </div>
 
   <script src="js/app.js"></script>
