start cat array with second cat pic

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <!--insert cat image and move/click counter-->
 <img src="images/cat1.jpg" id="catImg1">
 <p></p>
+<img src="images/cat2.jpg" id="catImg2">
+<p></p>
 <span class="click-count" id="clicks">0</span> clicks
 </div>
 
