--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
   <h1>Cat Clicker</h1>
   <p></p>
 
-<div class="cats" id="cat1">
+<div class="cats" id="cat">
 <!--insert cat image and move/click counter-->
+<h1 class="catName" id="catName1">Poplinre</h1>
 <img src="images/cat1.jpg" id="catImg1">
 <p></p>
+<span class="click-count" id="clicks">0</span> clicks
+<p></p>
+<h1 class="catName" id="catName2">Chewie</h1>
 <img src="images/cat2.jpg" id="catImg2">
 <p></p>
 <span class="click-count" id="clicks">0</span> clicks
 </div>
 
-  <script src="js/app.js"></script>
+  <script type = "text/javascript" src="js/app.js"></script>
 </body>
 </html>
