--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
   <p></p>
 
 <div class="cats" id="cat">
+  <ul class = "catList" id="catList">
+
 <!--insert cat image and move/click counter-->
 <h1 class="catName" id="catName1">Poplinre</h1>
 <img src="images/cat1.jpg" id="catImg1">
 <p></p>
-<span class="click-count" id="clicks">0</span> clicks
+<span class="click-count" id="click1">0</span> clicks
 <p></p>
 <h1 class="catName" id="catName2">Chewie</h1>
 <img src="images/cat2.jpg" id="catImg2">
 <p></p>
-<span class="click-count" id="clicks">0</span> clicks
+<span class="click-count" id="click2">0</span> clicks
 </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type = "text/javascript" src="js/app.js"></script>
 </body>
 </html>
