insert html for catpics

--- a/index.html
+++ b/index.html
@@ -21,15 +21,34 @@
   <ul class = "catList" id="catList">
 
 <!--insert cat image and move/click counter-->
-<h1 class="catName" id="catName1">Poplinre</h1>
-<img src="images/cat1.jpg" id="catImg1">
+<h1 class="catName" id="catName1">Hana</h1>
+<img src="images/cat1.jpg" alt class="catImg" id="catImg1">
 <p></p>
 <span class="click-count" id="click1">0</span> clicks
 <p></p>
-<h1 class="catName" id="catName2">Chewie</h1>
+
+<h1 class="catName" alt class="catImg" id="catName2">Ttul</h1>
 <img src="images/cat2.jpg" id="catImg2">
 <p></p>
 <span class="click-count" id="click2">0</span> clicks
+
+<h1 class="catName" alt class="catImg" id="catName3">Set</h1>
+<img src="images/cat3.jpg" id="catImg3">
+<p></p>
+<span class="click-count" id="click3">0</span> clicks
+<p></p>
+
+<h1 class="catName" alt class="catImg" id="catName2">Net</h1>
+<img src="images/cat4.jpg" id="catImg4">
+<p></p>
+<span class="click-count" id="click4">0</span> clicks
+<p></p>
+
+<h1 class="catName" alt class="catImg" id="catName5">Tasut</h1>
+<img src="images/cat5.jpg" id="catImg5">
+<p></p>
+<span class="click-count" id="click5">0</span> clicks
+
 </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
