html for buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,38 @@
 
 <div class="cats" id="cat">
   <ul class = "catList" id="catList">
+    <ul class="buttonList" id="buttonList1">
+      <p>
+    <button href="#" id="button1" class="buttons">Hana</button>
+      </p>
+    </ul>
+
+      <ul class="buttonList" id="buttonList1">
+        <p>
+      <button href="#" id="button2" class="buttons">Ttul</button>
+        </p>
+      </ul>
+
+      <ul class="buttonList" id="buttonList1">
+        <p>
+      <button href="#" id="button3" class="buttons">Set</button>
+        </p>
+      </ul>
+
+      <ul class="buttonList" id="buttonList1">
+        <p>
+      <button href="#" id="button4" class="buttons">Net</button>
+        </p>
+      </ul>
+
+      <ul class="buttonList" id="buttonList1">
+        <p>
+      <button href="#" id="button5" class="buttons">Tasut</button>
+        </p>
+      </ul>
+
+    </ul>
+
 
 <!--insert cat image and move/click counter-->
 <h1 class="catName" id="catName1">Hana</h1>
