created list for cat array

--- a/index.html
+++ b/index.html
@@ -19,36 +19,32 @@
 
 <div class="cats" id="cat">
   <ul class = "catList" id="catList">
-    <ul class="buttonList" id="buttonList1">
+    <ul class="catBtn" id="catBtn">
       <p>
-    <button href="#" id="button1" class="buttons">Hana</button>
+    <button href="#" id="btn1" class="btns">Hana</button>
+      </p>
+
+    </ul>
+    <ul class="catBtn" id="catBtn">
+      <p>
+    <button href="#" id="btn2" class="btns">Ttul</button>
       </p>
     </ul>
-
-      <ul class="buttonList" id="buttonList2">
-        <p>
-      <button href="#" id="button2" class="buttons">Ttul</button>
-        </p>
-      </ul>
-
-      <ul class="buttonList" id="buttonList3">
-        <p>
-      <button href="#" id="button3" class="buttons">Set</button>
-        </p>
-      </ul>
-
-      <ul class="buttonList" id="buttonList4">
-        <p>
-      <button href="#" id="button4" class="buttons">Net</button>
-        </p>
-      </ul>
-
-      <ul class="buttonList" id="buttonList5">
-        <p>
-      <button href="#" id="button5" class="buttons">Tasut</button>
-        </p>
-      </ul>
-
+    <ul class="catBtn" id="catBtn">
+      <p>
+    <button href="#" id="btn3" class="btns">Set</button>
+      </p>
+    </ul>
+    <ul class="catBtn" id="catBtn">
+      <p>
+    <button href="#" id="btn4" class="btns">Net</button>
+      </p>
+    </ul>
+    <ul class="catBtn" id="catBtn">
+      <p>
+    <button href="#" id="btn5" class="btns">Tasut</button>
+      </p>
+    </ul>
     </ul>
 
 
